# filerotate

./: Cargo.toml  LICENSE  README.md  example.yaml
src/: byte_size.rs  file.rs  fs.rs  main.rs  path_rule.rs  regex.rs  rotate.rs  util.rs
