[package]
name = "filerotate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.1"
clap = "3.0.10"
nix = "0.23.1"
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0"
rand = "0.8.0"
tempfile = "3.3.0"
regex = "1"
